feat: Terminando a documentação do swagger
